@@ -1,3 +1,8 @@
+2019-06-18  Cesar Philippidis  <cesar@codesourcery.com>
+
+	* testsuite/libgomp.oacc-fortran/allocatable-array-1.f90: New
+	file.
+
 2019-06-18  Thomas Schwinge  <thomas@codesourcery.com>
 
 	PR fortran/90743
